# jmcce

./: ChangeLog  Makefile.am  README.md  README.org.utf8  acconfig.h  acinclude.m4  aclocal.m4  configure.in  genconf.sh
conf/: Makefile.am  Makefile.in  jmcceb5.ini  jmcceb5.ini.utf8  jmccegb.ini
doc/: FAQ  Makefile.am  Makefile.in  README.1.3.big5  README.bcs  README.cce  README.chdrv  README.chewing  README.jmcce  README.jmcce.1.3  README.yact  jmcce-1.3.1  jmcce.1  readme.jmcce.eng  readme.jmce.eng
extras/: Makefile.am  Makefile.in
extras/chewing/: BUGS  CHANGES  Makefile.am  Makefile.in  char.c  chewingio.c  chewingutil.c  choice.c  dict.c  hash.c  key2pho.c  tree.c  tsi.src  userphrase.c  zuin.c
extras/chewing/doc/: FILES  README
extras/chewing/include/: char.h  chewingio.h  chewingutil.h  dict.h  global.h  hash.h  userphrase.h  zuin.h
extras/chewing/util/: Makefile.am  Makefile.in  maketree.c  sort_dic.c  sort_word.c
fonts/: Makefile.am  Makefile.in  cclib.16  cclib.16a  cclib16.hbf  cs5809.fdt  fonts.alias  fonts.dir  han-asc.15  han-spc.15  han-std.15  han-supp.15  han15.hbf
include/: asm_routine.h  associate.h  big2gb.h  c_routine.h  config.h  draw.h  error.h  fb.h  gb2big.h  gvfont.h  hbffont.h  hzinput.h  hztty.h  jmcce.h  new_chewing.h  newimp.h  phone.h
inputref/: 4corner.ikt  4corner.tui  Makefile.am  Makefile.in  array30.ikt  array30.tui  associate.def  boshiamy.ikt  cangjie.ikt  cangjie.tui  ccdospy.tui  chion.tui  cjGB.ikt  cjGB.tui  cjeagle.ikt  cjeagle.tui  cjpun.tui  ctlau.ikt  dayi.ikt  engGB.ikt  engGB.tui  english.ikt  english.tui  etzy.ikt  etzy.tui  ez.ikt  ez2000a.tui  hiragana.ikt  hiragana.tui  hsu.ikt  jacj.ekt  jacj.tui  jaez.ekt  jaez.tui  jahuriga.ekt  jahuriga.tui  jakana.tui  katakana.tui  notonepy.ikt  notonepy.tui  (+47 more)
src/: Makefile.am  Makefile.in  asm_routine.S  c_routine.c  chewing.c  console.c  convertencode.cpp  convertencode.h  draw.c  draw.cpp  draw.h  encoding.h  error.c  fb.c  fb.cpp  fb.h  fb.sh  hbffont.c  hist.c  hzinput.c  hzinput.cpp  hzinput.h  hztty.c  hztty.h  jmcce.c  jmcce.cpp  makefile  makefile.lfb  makefile.svga  new_chewing.c  new_chewing.cpp  newimp.c  newimp.cpp  rule  vgatest.c
test/: Makefile  earth  random.c  readme  sequence.c  x.vt  x1.vt  xmas_a.vt
util/: Makefile.am  Makefile.in  tit2tui.c
