doc_files = \
	README.1.3.big5 \
	README.bcs \
	README.cce \
	README.chdrv \
	README.jmcce \
	README.jmcce.1.3 \
	README.yact \
	README.chewing \
	FAQ \
	jmcce-1.3.1 \
	readme.jmcce.eng \
	readme.jmce.eng 

man_MANS = jmcce.1

pkgdatadir = ${prefix}/share/doc/${PACKAGE}-${VERSION}
pkgdata_DATA = $(doc_files)

EXTRA_DIST = $(doc_files) jmcce.1 


