inputref_files = \
	chion.ekt \
	jacj.ekt \
	jaez.ekt \
	jahuriga.ekt \
	punct.ekt \
	punctGB.ekt \
	qj.ekt \
	qjGB.ekt \
	sqengchi.ekt \
	4corner.tui \
	associate.def \
	array30.tui \
	cangjie.tui \
	ccdospy.tui \
	chion.tui \
	cjGB.tui \
	cjeagle.tui \
	cjpun.tui \
	engGB.tui \
	english.tui \
	etzy.tui \
	ez2000a.tui \
	hiragana.tui \
	jacj.tui \
	jaez.tui \
	jahuriga.tui \
	jakana.tui \
	katakana.tui \
	notonepy.tui \
	punct.tui \
	punctGB.tui \
	py.tui \
	qj.tui \
	qjGB.tui \
	simplex.tui \
	sqengchi.tui \
	telecode.tui \
	tonepy.tui \
	zozy.tui \
	4corner.ikt \
	array30.ikt \
	boshiamy.ikt \
	cangjie.ikt \
	ccdospy.ikt \
	cjGB.ikt \
	cjeagle.ikt \
	ctlau.ikt \
	dayi.ikt \
	engGB.ikt \
	english.ikt \
	etzy.ikt \
	ez.ikt \
	hiragana.ikt \
	hsu.ikt \
	katakana.ikt \
	notonepy.ikt \
	py.ikt \
	qianma.ikt \
	simplex.ikt \
	sw.ikt \
	telecode.ikt \
	tonepy.ikt \
	wubi.ikt \
	zozy.ikt \
	sym_ARR.vkt \
	sym_BEN.vkt \
	sym_BLA.vkt \
	sym_CEN.vkt \
	sym_CHI.vkt \
	sym_CIR.vkt \
	sym_CJG.vkt \
	sym_COT.vkt \
	sym_DOT.vkt \
	sym_DTP.vkt \
	sym_DUB.vkt \
	sym_EUR.vkt \
	sym_FRA.vkt \
	sym_FRM.vkt \
	sym_FUL.vkt \
	sym_FUN.vkt \
	sym_GRK.vkt \
	sym_HAN.vkt \
	sym_JAP.vkt \
	sym_KBD.vkt \
	sym_KKP.vkt \
	sym_MAT.vkt \
	sym_PAR.vkt \
	sym_PHO.vkt \
	sym_ROM.vkt \
	sym_RUS.vkt \
	sym_STR.vkt \
	sym_UNT.vkt 

EXTRA_DIST = $(inputref_files)


pkgdatadir = $(JMCCE_DATADIR)
pkgdata_DATA = $(inputref_files)

